# Mocra-Py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: quickstart.py
mocra/: __init__.py  client.py  models.py
tests/: __init__.py  conftest.py  test_client.py  test_models.py
